<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/triviabg"
    tools:context="com.example.jeremiahwong.triviart.Triviart">
    <TextView
        android:text="@string/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textColor="#7d669e"
        android:textSize="20sp"
        android:textStyle="bold" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/articles"
        android:id="@+id/articleButton"/>

    <FrameLayout
        android:id="@+id/article_list"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_margin="10dp">
    </FrameLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/questions"
        android:id="@+id/quizButton"/>
</LinearLayout>
